# Rendering-Playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
CMakeModules/: FindVulkan.cmake
resources/models/gilnean-chapel/source/: gilneas.fbx
resources/models/junkrat/: junkrat.FBX
resources/shaders/: cube.shader  default.shader  material.shader  model.shader  postprocess.shader  renderDepth.shader  shadowMap.shader  sprite.shader
scripts/: transpileGlsl.bat
src/: Allocator.cpp  Allocator.h  Asset.cpp  Asset.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  FileUtils.cpp  FileUtils.h  FrameBuffer.cpp  FrameBuffer.h  FrameData.cpp  FrameData.h  FullscreenQuad.cpp  FullscreenQuad.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  MemTracker.cpp  MemTracker.h  Mesh.cpp  Mesh.h  Postprocessing.cpp  Postprocessing.h  Quad.cpp  Quad.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h  (+16 more)
